@@ -2,6 +2,7 @@ v1.2.4
 	allow overwriting existing streams
 	fix encoding issue
 	the beatles -> beatles, the
+	columns in current - allow clicking on headers to sort; ellipsize headers
 
 v1.3
 	genre mode (genre -> artist -> album)
@@ -20,7 +21,6 @@ Future:
 	libnotify?
 	test multiple streams at once..
 	crop songs in current playlist?
-	columns in current/library (#3367)
 	mpd statistics
 	hover over album art -> show larger image in borderless popup after 0.5 sec?
 	use GtkVolumeButton?
